exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 2991,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2308,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2308
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2991 bytes (0.03%)"
    }
  ]
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data calculating gzip size 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 392,
      "mappedBytes": 510,
      "eolBytes": 1,
      "sourceMapCommentBytes": 55,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 300
        },
        "src/bar.js": {
          "size": 108
        },
        "src/foo.js": {
          "size": 102
        },
        "[sourceMappingURL]": {
          "size": 55
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 1572,
      "mappedBytes": 510,
      "eolBytes": 1,
      "sourceMapCommentBytes": 1204,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 300
        },
        "src/bar.js": {
          "size": 108
        },
        "src/foo.js": {
          "size": 102
        },
        "[sourceMappingURL]": {
          "size": 1204
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data excluding source map bytes 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 683,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 683,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2308,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    },
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map.js",
      "totalBytes": 682,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 0,
      "sourceMapCommentBytes": 0,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 0
        },
        "[unmapped]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/no-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/682 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 2991,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2308,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2308
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2991 bytes (0.03%)"
    }
  ]
}

exports['api explore should give name to "null" source a name 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-source.js",
      "totalBytes": 1547,
      "mappedBytes": 1496,
      "unmappedBytes": 13,
      "eolBytes": 1,
      "sourceMapCommentBytes": 37,
      "files": {
        "../webpack/bootstrap": {
          "size": 1491
        },
        "[no source]": {
          "size": 5
        },
        "[sourceMappingURL]": {
          "size": 37
        },
        "[unmapped]": {
          "size": 13
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/no-source.js",
      "isWarning": true,
      "code": "OneSourceSourceMap",
      "message": "Your source map only contains one source (../webpack/bootstrap).\nThis can happen if you use browserify+uglifyjs, for example, and don't set the --in-source-map flag to uglify.\nSee https://github.com/danvk/source-map-explorer/blob/master/README.md#generating-source-maps"
    },
    {
      "bundleName": "data/no-source.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 13/1547 bytes (0.84%)"
    }
  ]
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[sourceMappingURL]\t35\r
[unmapped]\t1\r
[EOLs]\t1\r
\r
[sourceMappingURL]\t2308\r
node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[unmapped]\t1\r
[EOLs]\t1
`
